--- a/StudyNotes/Re-Study-iOS/Business/Business/QRCode/Generation/GenerationViewController.storyboard
+++ b/StudyNotes/Re-Study-iOS/Business/Business/QRCode/Generation/GenerationViewController.storyboard
@@ -1,5 +1,8 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14460.31" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="hXa-l4-Sbe">
+    <device id="retina4_7" orientation="portrait">
+        <adaptation id="fullscreen"/>
+    </device>
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14460.20"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
@@ -11,11 +14,44 @@
             <objects>
                 <viewController id="hXa-l4-Sbe" customClass="GenerationViewController" customModule="Business" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="9FW-gD-FKy">
-                        <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" alignment="center" spacing="10" translatesAutoresizingMaskIntoConstraints="NO" id="f11-0a-XFR">
+                                <rect key="frame" x="67.5" y="44.5" width="240" height="338"/>
+                                <subviews>
+                                    <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="cNX-vj-8D3">
+                                        <rect key="frame" x="20" y="0.0" width="200" height="200"/>
+                                        <constraints>
+                                            <constraint firstAttribute="height" constant="200" id="Nsa-TM-eZm"/>
+                                            <constraint firstAttribute="width" constant="200" id="uou-IL-ZKg"/>
+                                        </constraints>
+                                    </imageView>
+                                    <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" textAlignment="natural" translatesAutoresizingMaskIntoConstraints="NO" id="aFe-pQ-f3n">
+                                        <rect key="frame" x="0.0" y="210" width="240" height="128"/>
+                                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                        <constraints>
+                                            <constraint firstAttribute="height" constant="128" id="u9W-Ba-mHv"/>
+                                            <constraint firstAttribute="width" constant="240" id="zJ8-bF-l2m"/>
+                                        </constraints>
+                                        <string key="text">Lorem ipsum dolor sit er elit lamet, consectetaur cillium adipisicing pecu, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Nam liber te conscient to factor tum poen legum odioque civiuda.</string>
+                                        <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                        <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
+                                    </textView>
+                                </subviews>
+                            </stackView>
+                        </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <constraints>
+                            <constraint firstItem="f11-0a-XFR" firstAttribute="centerY" secondItem="9FW-gD-FKy" secondAttribute="centerY" constant="-120" id="lBp-Xl-anN"/>
+                            <constraint firstItem="f11-0a-XFR" firstAttribute="centerX" secondItem="9FW-gD-FKy" secondAttribute="centerX" id="yvT-wb-mQ1"/>
+                        </constraints>
                         <viewLayoutGuide key="safeArea" id="qGM-DE-i6t"/>
                     </view>
+                    <connections>
+                        <outlet property="contentTextView" destination="aFe-pQ-f3n" id="GJk-oE-ei0"/>
+                        <outlet property="qrCodeImageView" destination="cNX-vj-8D3" id="SBK-Ja-18Q"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="H8v-Zj-VZ4" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
