--- a/StudyNotes/Re-Study-iOS/Business/Business/QRCode/Detector/DetectorViewController.storyboard
+++ b/StudyNotes/Re-Study-iOS/Business/Business/QRCode/Detector/DetectorViewController.storyboard
@@ -16,13 +16,52 @@
                     <view key="view" contentMode="scaleToFill" id="zEI-W5-GHs">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" alignment="center" spacing="10" translatesAutoresizingMaskIntoConstraints="NO" id="tSe-zH-yV2">
+                                <rect key="frame" x="37.5" y="8.5" width="300" height="650"/>
+                                <subviews>
+                                    <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="qrcode" translatesAutoresizingMaskIntoConstraints="NO" id="4nV-Gt-8fu">
+                                        <rect key="frame" x="0.0" y="0.0" width="300" height="300"/>
+                                        <constraints>
+                                            <constraint firstAttribute="width" constant="300" id="KFa-R0-JzR"/>
+                                            <constraint firstAttribute="height" constant="300" id="MYt-l4-2IL"/>
+                                        </constraints>
+                                    </imageView>
+                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="ez3-Rm-ap5">
+                                        <rect key="frame" x="120" y="310" width="60" height="30"/>
+                                        <state key="normal" title="Detector"/>
+                                        <connections>
+                                            <action selector="detectorQRCode:" destination="sbb-3p-7Ci" eventType="touchUpInside" id="M40-T9-l8M"/>
+                                        </connections>
+                                    </button>
+                                    <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="Jeo-iN-ueG">
+                                        <rect key="frame" x="0.0" y="350" width="300" height="300"/>
+                                        <constraints>
+                                            <constraint firstAttribute="width" constant="300" id="6EI-e9-rwe"/>
+                                            <constraint firstAttribute="height" constant="300" id="hkf-JT-9ih"/>
+                                        </constraints>
+                                    </imageView>
+                                </subviews>
+                            </stackView>
+                        </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <constraints>
+                            <constraint firstItem="tSe-zH-yV2" firstAttribute="centerY" secondItem="zEI-W5-GHs" secondAttribute="centerY" id="svg-Vh-1XQ"/>
+                            <constraint firstItem="tSe-zH-yV2" firstAttribute="centerX" secondItem="zEI-W5-GHs" secondAttribute="centerX" id="vyz-8Z-3Ah"/>
+                        </constraints>
                         <viewLayoutGuide key="safeArea" id="FVr-by-2BO"/>
                     </view>
+                    <connections>
+                        <outlet property="resultImageView" destination="Jeo-iN-ueG" id="FO1-Qb-Odw"/>
+                        <outlet property="sourceImageView" destination="4nV-Gt-8fu" id="peY-Rc-DvM"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="igN-Y7-WoC" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="993" y="752"/>
+            <point key="canvasLocation" x="992.79999999999995" y="751.57421289355329"/>
         </scene>
     </scenes>
+    <resources>
+        <image name="qrcode" width="946" height="1262"/>
+    </resources>
 </document>
