--- a/StudyNotes/iOS Collection/Business/Business/Bluetooth/BluetoothViewController.storyboard
+++ b/StudyNotes/iOS Collection/Business/Business/Bluetooth/BluetoothViewController.storyboard
@@ -51,7 +51,7 @@
                                     <action selector="mcButtonClick:" destination="Ofe-08-v7R" eventType="touchUpInside" id="xKG-Ds-yXw"/>
                                 </connections>
                             </button>
-                            <switch opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" contentHorizontalAlignment="center" contentVerticalAlignment="center" on="YES" translatesAutoresizingMaskIntoConstraints="NO" id="Elf-7h-Kvo">
+                            <switch opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" contentHorizontalAlignment="center" contentVerticalAlignment="center" translatesAutoresizingMaskIntoConstraints="NO" id="Elf-7h-Kvo">
                                 <rect key="frame" x="316" y="19.5" width="51" height="31"/>
                                 <connections>
                                     <action selector="changeAdv:" destination="Ofe-08-v7R" eventType="valueChanged" id="S1h-Nw-k2i"/>
@@ -63,15 +63,24 @@
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="smo-Wd-HTl">
+                                <rect key="frame" x="50" y="20" width="67" height="30"/>
+                                <state key="normal" title="Bluetooth"/>
+                                <connections>
+                                    <segue destination="wmu-c7-mC9" kind="show" id="sqq-IO-qZN"/>
+                                </connections>
+                            </button>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <constraints>
                             <constraint firstItem="Elf-7h-Kvo" firstAttribute="centerY" secondItem="imW-dV-RcM" secondAttribute="centerY" id="2Ok-p0-uKf"/>
                             <constraint firstItem="T3w-N0-OmP" firstAttribute="leading" secondItem="z5o-Gc-I5b" secondAttribute="leading" id="CbG-sM-OoB"/>
+                            <constraint firstItem="smo-Wd-HTl" firstAttribute="centerY" secondItem="imW-dV-RcM" secondAttribute="centerY" id="HNn-F1-Hzj"/>
                             <constraint firstItem="9jq-zm-GhJ" firstAttribute="top" secondItem="T3w-N0-OmP" secondAttribute="bottom" id="KGI-gG-acM"/>
                             <constraint firstItem="Elf-7h-Kvo" firstAttribute="leading" secondItem="PdO-uU-TrR" secondAttribute="trailing" constant="10" id="Lp2-dd-fpF"/>
                             <constraint firstItem="z5o-Gc-I5b" firstAttribute="bottom" secondItem="9jq-zm-GhJ" secondAttribute="bottom" id="N1D-wN-8Eb"/>
                             <constraint firstItem="T3w-N0-OmP" firstAttribute="top" secondItem="imW-dV-RcM" secondAttribute="bottom" id="OMM-RP-SEq"/>
+                            <constraint firstItem="smo-Wd-HTl" firstAttribute="leading" secondItem="imW-dV-RcM" secondAttribute="trailing" constant="10" id="QRN-sO-Igd"/>
                             <constraint firstItem="imW-dV-RcM" firstAttribute="leading" secondItem="z5o-Gc-I5b" secondAttribute="leading" constant="10" id="bbn-6S-cZo"/>
                             <constraint firstItem="Elf-7h-Kvo" firstAttribute="centerY" secondItem="PdO-uU-TrR" secondAttribute="centerY" id="fjT-pX-3yF"/>
                             <constraint firstItem="T3w-N0-OmP" firstAttribute="trailing" secondItem="z5o-Gc-I5b" secondAttribute="trailing" id="jLG-YN-ThO"/>
@@ -82,6 +91,7 @@
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="z5o-Gc-I5b"/>
                     </view>
+                    <navigationItem key="navigationItem" id="ctO-X3-oui"/>
                     <connections>
                         <outlet property="inputTextField" destination="9jq-zm-GhJ" id="Hif-zL-xL4"/>
                         <outlet property="tableView" destination="T3w-N0-OmP" id="QFj-6g-7KA"/>
@@ -89,7 +99,22 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="hHF-QP-76O" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-178.40000000000001" y="233.43328335832086"/>
+            <point key="canvasLocation" x="526" y="233"/>
+        </scene>
+        <!--Bluetooth View Controller2-->
+        <scene sceneID="kj2-qx-aIp">
+            <objects>
+                <viewController id="wmu-c7-mC9" customClass="BluetoothViewController2" customModule="Business" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="RSN-qH-6sL">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <viewLayoutGuide key="safeArea" id="P1z-OR-3x3"/>
+                    </view>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="yAy-vm-E6y" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1188" y="233"/>
         </scene>
     </scenes>
 </document>
