--- a/StudyNotes/iOS Collection/Business/Business/Bluetooth/BluetoothViewController.storyboard
+++ b/StudyNotes/iOS Collection/Business/Business/Bluetooth/BluetoothViewController.storyboard
@@ -108,13 +108,41 @@
                     <view key="view" contentMode="scaleToFill" id="RSN-qH-6sL">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="yTs-r2-cPE">
+                                <rect key="frame" x="160" y="120" width="55" height="30"/>
+                                <state key="normal" title="iBeacon"/>
+                                <connections>
+                                    <segue destination="yj8-Yd-ark" kind="show" id="577-aW-bTe"/>
+                                </connections>
+                            </button>
+                        </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <constraints>
+                            <constraint firstItem="yTs-r2-cPE" firstAttribute="centerX" secondItem="RSN-qH-6sL" secondAttribute="centerX" id="6cC-dd-evF"/>
+                            <constraint firstItem="yTs-r2-cPE" firstAttribute="top" secondItem="P1z-OR-3x3" secondAttribute="top" constant="100" id="y85-D0-8EP"/>
+                        </constraints>
                         <viewLayoutGuide key="safeArea" id="P1z-OR-3x3"/>
                     </view>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="yAy-vm-E6y" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="1188" y="233"/>
+        </scene>
+        <!--View Controller-->
+        <scene sceneID="23d-IT-zKo">
+            <objects>
+                <viewController id="yj8-Yd-ark" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="SmL-cM-BSa">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <viewLayoutGuide key="safeArea" id="aou-1T-pIp"/>
+                    </view>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="u2B-ld-OGD" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1842" y="233"/>
         </scene>
     </scenes>
 </document>
