--- a/StudyNotes/Swift Note/LiveBroadcast/LiveBroadcast/Classes/Rank/RankViewController.storyboard
+++ b/StudyNotes/Swift Note/LiveBroadcast/LiveBroadcast/Classes/Rank/RankViewController.storyboard
@@ -10,10 +10,10 @@
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
-        <!--View Controller-->
+        <!--Rank View Controller-->
         <scene sceneID="5tC-CR-MtL">
             <objects>
-                <viewController id="Bkg-hO-daD" sceneMemberID="viewController">
+                <viewController id="Bkg-hO-daD" customClass="RankViewController" customModule="LiveBroadcast" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="KxI-9c-OoL">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
