--- a/StudyNotes/Swift Note/LiveBroadcast/LiveBroadcast/Classes/Home/HomeViewController.storyboard
+++ b/StudyNotes/Swift Note/LiveBroadcast/LiveBroadcast/Classes/Home/HomeViewController.storyboard
@@ -10,10 +10,10 @@
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
-        <!--View Controller-->
+        <!--Home View Controller-->
         <scene sceneID="KYX-OT-fpM">
             <objects>
-                <viewController id="wkf-57-J5a" sceneMemberID="viewController">
+                <viewController id="wkf-57-J5a" customClass="HomeViewController" customModule="LiveBroadcast" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="OLQ-hr-hxi">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
