--- a/StudyNotes/Swift Note/LiveBroadcast/LiveBroadcast/Classes/Main/Base.lproj/Main.storyboard
+++ b/StudyNotes/Swift Note/LiveBroadcast/LiveBroadcast/Classes/Main/Base.lproj/Main.storyboard
@@ -94,7 +94,8 @@
                         <rect key="frame" x="0.0" y="0.0" width="1000" height="1000"/>
                         <autoresizingMask key="autoresizingMask"/>
                         <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                        <color key="selectedImageTintColor" red="1" green="0.57810515169999999" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        <color key="barTintColor" cocoaTouchSystemColor="darkTextColor"/>
+                        <color key="selectedImageTintColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                     </tabBar>
                     <connections>
                         <segue destination="D3B-bp-JPn" kind="relationship" relationship="viewControllers" id="Owx-jr-lF4"/>
